# tile-matching-game

./: Cargo.toml  README.md
.github/workflows/: release.yaml  rust.yaml
src/: data.rs  main.rs
src/pages/: finish_page.rs  game_page.rs  mod.rs  start_menu.rs
src/pages/styles/: finish_page.css  game_page.css  start_menu.css
